@@ -1,4 +1,9 @@
 
+gmdb v0.7.1                                                           2011-??-??
+
+  *) Bugfix: challenge-response authentication was not properly encoding client
+     response.
+
 gmdb v0.7.0                                                           2011-07-25
 
   *) Feature: new 'archive' command for creating a single compressed file
